# aslab-cpp-06-compute-01-bitonic

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  bitonic.cc  matmult.cc  oclinfo.cc  vadd.cc
app/: oclinfo.cc
common/: opencl_include.hpp  selector.hpp  utils.hpp
include/: bitonic.hpp  i_bitonic_sort.hpp  simple_bitonic_sort.hpp
kernels/: bitonic_local_initial.cl  bitonic_naive.cl  matmult_naive.cl  matmult_tiled.cl  matmult_tiled_arb.cl  sort8.cl
measurements/: raw.json
results/: rtx2060_matmult_tiled_lsz11_4096x2048x4096_eigen_float.txt  rxt2060_bitonic_local_n24_lsz2048_float.txt  rxt2060_bitonic_naive_n24_float.txt
scripts/: bitonic-measure.py  bitonic-measures.py  kernel2hpp.py  testgen.py
vadd/: vadd.cc  vadd.cl
